--- a/home.html
+++ b/home.html
@@ -692,7 +692,7 @@
       }
   
       </script>
-      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <script src="./assets/vendors/bootstrap/js/bootstrap.js"></script>  
     <script src="./assets/vendors/owlcarousel/js/jquery.min.js"></script>  
