--- a/home.html
+++ b/home.html
@@ -454,7 +454,7 @@
 
               <div class="row form col-lg-8 col-sm-12 m-auto p-4 mb-5" data-aos="fade-right">
                   <h4 class="m-3">Contact form</h4>
-                  <form class="row needs-validation m-auto" action="./mail/send.php" method="post" id="contactForm">
+                  <form class="row needs-validation m-auto" action="send.php" method="post" id="contactForm">
                       <div class="col-lg-6 pt-4">
                           <div class="form-input-box d-flex align-items-center mb-4">
                               <i class="fa fa-user-alt"></i>
