--- a/home.html
+++ b/home.html
@@ -477,8 +477,7 @@
                       </div>
                       <div class="btn mt-4" id="btnContactUs"><a href="javascript:gonder();"  id="btn" class="link">Send</a></div>
                   </form>
-                  <div id="success_message" style="width:100%; height:100%; display:none; "> <h3>Sent your message successfully!</h3> </div>
-                  <div id="error_message" style="width:100%; height:100%; display:none; "> <h3>Error</h3> Sorry there was an error sending your form. </div>
+                  <span class="alert alert-danger e_mes">*Message.</span> 
               </div>
             </div>
             
