--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <link href="./assets/vendors/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="./form/form.js"></script>
+    <!-- <script src="./form/form.js"></script> -->
 
   <!-- =======================================================
   * Template Name: Rentz - v1.0
