--- a/home.html
+++ b/home.html
@@ -477,7 +477,7 @@
                       </div>
                       <div class="btn mt-4" id="btnContactUs"><a href="javascript:gonder();"  id="btn" class="link">Send</a></div>
                   </form>
-                  <span class="alert alert-danger e_mes"></span> 
+                  <div id="info"></div> 
               </div>
             </div>
             
